--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/09. Anchor tags/work.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/09. Anchor tags/work.html
@@ -10,4 +10,7 @@ Challenge:
 Create an anchor tag that links back to the index.html page 
 -->
 
-
+<p>Go back to the 
+    <a href="index.html" target="_blank">homepage</a>
+</p>
+    
