--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/10. Add an anchor tag to Google.com/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/10. Add an anchor tag to Google.com/index.html
@@ -12,4 +12,4 @@ Add the anchor tag that points to blog.html.
 The link should be wrapped in a <p> tag.
 -->
 
-
+<p>we protect your <a href="blog.html">privacy.</a></p>
