--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/12. Lists/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/12. Lists/index.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <h1>My Favourite Foods</h1>
+    </head>
+    <body>
+        <ul>
+            <li>pizza</li>
+            <li>sushi</li>
+            <li>ice cream</li>
+        </ul>
+    </body>
 </html>
 
 <!--
