--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/13. Build a Personal Website/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/13. Build a Personal Website/index.html
@@ -10,6 +10,21 @@
         Challenge 1:
         Write the HTML for your personal website.
         -->
+
+        <img src = "per.jpg">
+        <h1>hi, my name is Tanishq Rawat</h1>
+        <h2>fun facts about me </h2>
+        <ul>
+            <li>i am 21 years old now </li> 
+            <li>i am goint to take a job with double digit </li>
+            <li>before i turn 25 i have done 100 Cr money to me   </li>
+            <li>i love to Create money makeing super businesses </li>
+        </ul> 
         
+        <p>please reach out to me on my <a href="www.gmail.com">email:</a></p>
+
+        <input type = "text" placeholder="write your email">
+
+        <button>Join the Newsletter</button>
     </body>
 </html>
