--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/08. Let_s build Google/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/08. Let_s build Google/index.html
@@ -7,5 +7,9 @@ Challenge:
 Write the four HTML tags you need to create a Google.com clone.
 Hint: one image, one input field, and two buttons.
 -->
+<img src = "google.png">
+<input type="text" >
+<button>Google Search</button>
+<button>I'm Feeling Lucky</button>
 
 
