--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/11. Proper document structure/blog.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/01. Intro to HTML/11. Proper document structure/blog.html
@@ -1,6 +1,11 @@
-<h1>Not much to see here</h1>
-<p>Return <a href="index.html">back to Google.</a></p>
-
+<!DOCTYPE html>
+<html>
+    <head></head>
+        <body>
+            <h1>Not much to see here</h1>
+            <p>Return <a href="index.html">back to Google.</a></p>
+        </body>
+</html>
 <!--
 Challenge:
 Add proper HTML document structure to this page.
