all html tasks completed

--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/10. CSS classes/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/02. Intro to CSS/10. CSS classes/index.html
@@ -6,8 +6,12 @@
         <div class="main">
             <!-- Challenge - part 1: 
             Add a class to each of these two elements -->
-            <img src="google.png" />
-            <input type="text" />
+            <div class = "spaced1">  
+                <img src="google.png" />
+            </div>
+            <div class = "spaced2">
+                <input type="text" />
+            </div>
         </div>  
     </body>
 </html>
