--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/02. Fix the image path/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/02. Fix the image path/index.html
@@ -10,7 +10,7 @@
             
             Hint: try to google "html file paths"
             -->
-            <img src="per.png">
+            <img src="per.png" alt="sample image"/>
             <h3>Per Harald Borgen</h3>
             <p>Frontend Developer</p>
             <h4>Oslo, Norway</h4>
