--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/04. Add alt attribute/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/04. Add alt attribute/index.html
@@ -8,7 +8,8 @@
             Challenge:
             Add an alt text to the image element.
             -->
-            <img src="images/per.png">
+            <img src="images/per.png" alt ="Muhammad Ali in the boxing ring screaming
+at Sonny Liston after knocking him out"/>
             <h3>Per Harald Borgen</h3>
             <p>Frontend Developer</p>
             <h4>Oslo, Norway</h4>
