--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/05. Make image smaller/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/05. Make image smaller/index.html
@@ -4,7 +4,9 @@
     </head>
     <body>
         <div>
+        <div class="image-container">
             <img src="images/per.png" alt="Per Harald Borgen smiling at the camera with a colorful background">
+        </div>
             <h3>Per Harald Borgen</h3>
             <p>Frontend Developer</p>
             <h4>Oslo, Norway</h4>
