--- a/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/08. Flex item containers/index.html
+++ b/learn-fullstack-development-main/02. HTML and CSS Fundamentals/03. Build a Business Card/08. Flex item containers/index.html
@@ -9,12 +9,16 @@
     column layout (make it two-column instead of four-column)
      -->
         <div class="card">
+            <div>
             <img
                 src="images/per.png"
                 alt="Per Harald Borgen smiling at the camera with a colorful background" class="avatar">
-            <h3>Per Harald Borgen</h3>
-            <p>Frontend Developer</p>
-            <h4>Oslo, Norway</h4>
+            </div>
+            <div>
+                <h3>Per Harald Borgen</h3>
+                <p>Frontend Developer</p>
+                <h4>Oslo, Norway</h4>
+            </div>
         </div>
     </body>
 </html>
